--- a/demo.html
+++ b/demo.html
@@ -1,19 +1,3 @@
-<?php
-$dsn = 'mysql:dbname=sample_db;host=localhost;';
-$user = 'hashimoto';
-$password = 'morijyobi';
-try {
-    $dbh = new PDO($dsn, $user, $password);
-​
-    $sql = "select * from user";
-    $result = $dbh->query($sql);
-    $del_list = $dbh->query($sql);
-
-} catch (PDOException $e) {
-    echo "接続失敗: " . $e->getMessage() . "\n";
-    exit();
-}
-?>
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -42,27 +26,27 @@ try {
         </div>
     </div>
 
-    <div class="container">
-        <ul class="nav nav-tabs">
+    <div class="containar">
+        <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item">
-                <a href="#tab1" class="nav-link active" data-toggle="tab">Select</a>
+                <a class="nav-link active" id="select" data-toggle="tab" href="#tab1" >Select</a>
             </li>
             <li class="nav-item">
-                <a href="#tab2" class="nav-link" data-toggle="tab">Insert</a>
+                <a class="nave-link" id="insert" data-toggle="tab" href="#tab2">Insert</a>
             </li>
             <li class="nav-item">
-                <a href="#tab3" class="nav-link" data-toggle="tab">Update</a>
+                <a class="nav-link" id="updata" data-toggle="tab" href="#tab3">Update</a>
             </li>
             <li class="nav-item">
-                <a href="#tab4" class="nav-link" data-toggle="tab">Delete</a>
+                <a class="nav-link" id="delete" data-toggle="tab" href="#tab4">Delet</a>
             </li>
         </ul>
 
         <div class="tab-content">
-            <div id="tab1" class="tab-pane active">
+            <div id="tab1" class="tab-pane active" role="tabpanel" aria-lavelledby="select">
                 <table class="table table-hover mt-2">
-                    <caption>Show User Table</caption>
-                    <thead class="thead-dark">
+                    <caption>show user table</caption>
+                    <thead class="thead-light">
                         <tr>
                             <th>Id</th>
                             <th>Name</th>
@@ -70,81 +54,67 @@ try {
                         </tr>
                     </thead>
                     <tbody>
-                        <?php foreach($result as $value){ ?>
-                            <tr>
-                                <th><?php echo "$value[id]" ?></th>
-                                <td><?php echo "$value[name]" ?></td>
-                                <td><?php echo "$value[age]" ?></td>
-                            </tr>
-                        <?php } ?> 
+                        <tr>
+                            <th>1</th>
+                            <td>User</td>
+                            <td>20</td>
+                        </tr>
+                        <tr>
+                            <th>2</th>
+                            <td>sato</td>
+                            <td>23</td>
+                        </tr>
+                        <tr>
+                            <th>3</th>
+                            <td>kawamura</td>
+                            <td>22</td>
+                        </tr>
+                        <tr>
+                            <th>4</th>
+                            <td>isikawa</td>
+                            <td>21</td>
+                        </tr>
                     </tbody>
-                </table>
+                </teble>
             </div>
-            <div id="tab2" class="tab-pane">
-                <form class="mt-5" action="./insert.php" method="POST" >
-                    <div class="form-group">
-                        <label for="id">ID</label>
+            <div id="tab2" class="tab-pane" role="tablepanel" aria-labelledby="insert">
+                <form action=".insert.php">
+                    <div class="form-group row">
+                        <lavel for="id">Id</lavel>
                         <input class="form-control" type="text" name="id" id="id">
                     </div>
                     <div class="form-group">
-                        <label for="name">Your Name</label>
+                        <lavel for="name">User</lavel>
                         <input class="form-control" type="text" name="name" id="name">
                     </div>
                     <div class="form-group">
-                        <label for="age">Age</label>
+                        <lavel for="age">Age</lavel>
                         <input class="form-control" type="text" name="age" id="age">
                     </div>
-                    
+
                     <button type="submit" class="btn btn-primary">Insert</button>
                 </form>
+            </div>
+            <div id="tab3" class="tab-pane">sample3
+                <form action=".update.php">
+                    <div class="form-group row">
+                        <lavel for="id">Id</lavel>
+                        <input class="form-control" type="text" name="id" id="id">
+                    </div>
+                    <div class="form-group">
+                        <lavel for="name">User</lavel>
+                        <input class="form-control" type="text" name="name" id="name">
+                    </div>
+                    <div class="form-group">
+                        <lavel for="age">Age</lavel>
+                        <input class="form-control" type="text" name="age" id="age">
+                    </div>
+
+                    <button type="submit" class="btn btn-primary">Insert</button>
+                </form>
+            </div>
+            <div id="tab4" class="tab-pane"  role="tablepanel" aria-labelledby="delete">sample4</div>
         </div>
-            <div id="tab3" class="tab-pane">
-            <form class="mt-5" action="./update.php" method="POST" >
-                    <div class="form-group">
-                        <label for="id">ID</label>
-                        <input class="form-control" type="text" name="id" id="id">
-                    </div>
-                    <div class="form-group">
-                        <label for="name">Your Name</label>
-                        <input class="form-control" type="text" name="name" id="name">
-                    </div>
-                    <div class="form-group">
-                        <label for="age">Age</label>
-                        <input class="form-control" type="text" name="age" id="age">
-                    </div>
-                    
-                    <button type="submit" class="btn btn-primary">Insert</button>
-                </form>
-            </div>
-            <div id="tab4" class="tab-pane">
-                <table class="table table-hover mt-2">
-
-                    <thead class="thead-dark">
-                        <tr>
-                            <th>Id</th>
-                            <th>Name</th>
-                            <th>Age</th>
-                            <th>-</th>
-                        </tr>
-                    </thead>
-
-                    <tbody>
-                        <?php foreach ($del_list as $value) { ?>
-                            <tr>
-                                <th><?php echo "$value[id]" ?></th>
-                                <td><?php echo "$value[name]" ?></td>
-                                <td><?php echo "$value[age]" ?></td>
-                                <td>
-                                    <form action="./delete.php" method="$_GET">
-                                        <input type="text" class="d-none" name="id" value="<?php echo "$value[id]" ?>">
-                                        <button type="submit" class="btn btn-danger">delete</button>
-                                    </form>
-                                </td>
-                            </tr>
-                        <?php } ?>
-                    </tbody>
-                </table>
-            </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
